name:           ViennaRNA-extras
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2014-2015
copyright:      Christian Hoener zu Siederdissen, 2014-2015
license:        BSD3
license-file:   LICENSE
category:       Bioinformatics
homepage:       http://www.bioinf.uni-leipzig.de/Software/gADP/
homepage:       https://github.com/choener/ViennaRNA-extras
bug-reports:    https://github.com/choener/ViennaRNA-extras/issues
maintainer:     choener@bioinf.uni-leipzig.de
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       ViennaRNA v2 bindings
description:    
                Extra functionality on top of the ViennaRNA bindings. Please
                note the special license of the ViennaRNA bindings (while the
                -extras library is BSD3, it is not very useful without the
                bindings)!
                .
                .
                If you use this software, please cite:
                .
                @
                R. Lorenz, S.H. Bernhart, C. Hoener zu Siederdissen, H. Tafer, C. Flamm, P.F. Stadler and I.L. Hofacker (2011)
                ViennaRNA Package 2.0
                Algorithms for Molecular Biology: 6:26
                @
                .
                <http://www.almob.org/content/6/1/26>



Extra-Source-Files:
  README.md
  changelog.md



library
  exposed-modules:
    BioInf.ViennaRNA.PartFun
  build-depends: base                 >= 4.7    && < 4.9
               , array
               , BiobaseXNA           >= 0.9    && < 0.10
               , ViennaRNA-bindings   >= 0.1.5  && < 0.1.6
  default-language:
    Haskell2010
  default-extensions: BangPatterns
  ghc-options:
    -O2 -funbox-strict-fields



source-repository head
  type: git
  location: git://github.com/choener/ViennaRNA-extras

